[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/scene_compositor/ui/panels/SceneCompositorEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/scene_compositor/ui/panels/SceneCompositorGraph.tscn" type="PackedScene" id=2]

[node name="SceneCompositorEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 300 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneCompositorGraph" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 1.0
margin_top = 0.0
margin_right = 0.0
scroll_offset = Vector2( 0, 0 )
[connection signal="node_selected" from="SceneCompositorGraph" to="." method="_on_SceneCompositorGraph_node_selected"]
